--- a/cp2/playbooks/ansible.cfg
+++ b/cp2/playbooks/ansible.cfg
@@ -1,5 +1,7 @@
-[defautls]
+[defaults]
+inventory = hosts
 hostfile = hosts
 remote_user = vagrant
-private_key_file = .vagrant/machines/default/virtualbox/private_key
+remote_port = 2222
+private_key_file = /home/daipeng/tmp/learn_ansbile/cp2/playbooks/.vagrant/machines/default/virtualbox/private_key
 host_key_checking = False
