--- a/cp2/playbooks/web-tls.yml
+++ b/cp2/playbooks/web-tls.yml
@@ -7,6 +7,12 @@
     conf_file: /etc/nginx/sites-available/default
     server_name: localhost
   tasks:
+    - name: backup old source.list
+      command: creates="/etc/apt/source.list.bak" mv /etc/apt/sources.list /etc/apt/sources.list.bak
+
+    - name: use 163 apt mirrors
+      copy: src=files/ubuntu14.04.source.list dest=/etc/apt/sources.list
+
     - name: install nginx
       apt: name=nginx update_cache=yes cache_valid_time=3600
 
@@ -23,7 +29,7 @@
 
     - name: copy nginx config file
       template: src=templates/nginx.conf.j2 dest={{ conf_file }}
-      notfiy: restart nginx
+      notify: restart nginx
 
     - name: enable configuration
       file: dest=/etc/nginx/sites-enabled/default src={{ conf_file }} state=link
@@ -34,5 +40,5 @@
 
   handlers:
     - name: restart nginx
-      service: name=nginx state=restart
+      service: name=nginx state=restarted
 
